z-index correction for popovers

--- a/compose_typeaheads.css
+++ b/compose_typeaheads.css
@@ -14,6 +14,7 @@
     border: 1px solid hsla(0, 0%, 0%, 0.4);
     border-radius: 6px;
     box-shadow: 0px 7px 13px rgba(0, 0, 0, 0.15), 0px 5px 8px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 10;
 }
 
 .dark .list_popover {
