--- a/send_options.css
+++ b/send_options.css
@@ -21,6 +21,7 @@
     border: 1px solid hsla(0, 0%, 0%, 0.4);
     border-radius: 6px;
     box-shadow: 0px 41px 80px rgba(0, 0, 0, 0.13), 0px 18.7257px 35.4802px rgba(0, 0, 0, 0.0935136), 0px 12.177px 21.4737px rgba(0, 0, 0, 0.0856364), 0px 8.4377px 13.9271px rgba(0, 0, 0, 0.0810408), 0px 5.51132px 8.57828px rgba(0, 0, 0, 0.0746815), 0px 2.77984px 4.11293px rgba(0, 0, 0, 0.0605595);
+    z-index: 20;
 }
 
 .dark .context_popover {
